Fix responsive on tablets

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1144,7 +1144,16 @@ hr {
   }
 }
 
-@media (max-width: 952px) {
+@media (max-width: 1440px) {
+  .lg\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .lg\:w-24 {
+    width: 6rem;
+  }
+
   .lg\:pl-12 {
     padding-left: 3rem;
   }
@@ -1152,6 +1161,16 @@ hr {
   .lg\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
